# Frederick_Python

./: .gitignore  README.md
.tmp.driveupload/: 62616
2025/06-11/calculator-demo/: calculator_agent-nb.ipynb
2025/06-11/nirbar/: test_chat.txt
2025/06-11/patterns/workflows/1-introduction/: 1-basic.py  3-tools.py  4-retrieval.py
2025/06-11/patterns/workflows/2-workflow-patterns/diagrams/: prompt-chaining.mmd
2025/August/: README.md
2025/June-11/basic-agent-tutorial/: README.md  basic_agent_tutorial.py
2025/June-11/basic-chat-client/: README.md  basic_chat_client.py  basic_chat_client_v0.py
2025/June-11/calculator-demo/: README.md  calculator_agent-nb.ipynb  calculator_agent.py  pyproject.toml  requirements.txt
2025/June-11/demo-basic-agent/: README.md
2025/June-11/files-demo/: README.md  files_agent.1.py  files_agent.py  requirements.txt
2025/June-11/files-demo/test/: test_file.txt
2025/June-11/nirbar/: README.md
2025/June-11/patterns/workflows/2-workflow-patterns/: 4-orchestrator.py
2025/June-11/patterns/workflows/2-workflow-patterns/diagrams/: orchestrator.mmd  parallelization.mmd
2025/June-11/presentations/: README.md
2025/June-11/tool-agent-tutorial/: README.md  basic_tool_agent.py  pyproject.toml  setup_openweathermapapi.txt  tool_agent_tutorial.py
2025/June-11/web-search-demo/: .env.example  .gitignore  README.md  basic_web_search_agent.py  main.py  pyproject.toml
2025/June-11/web-search-demo/src/: web_search_agent.py
calculator-demo/: requirements.txt
demo/: .env
demo-basic-agent/: basic_agent_tutorial.py
files-demo/: files_agent.2.py  pyproject.toml
patterns/workflows/1-introduction/: 2-structured.py  4-retrieval.md
patterns/workflows/2-workflow-patterns/diagrams/: routing.mmd  workflow-patterns.md
patterns/workflows/3-design-patterns/: .env
templates/meetup-template/: README.md
tool-agent-tutorial/: README.md  requirements.txt  test_model.py
