[project]
name = "files-demo"
version = "0.1.0"
description = "File System Agent Demo"
authors = [
    {name = "Glenn Mossy", email = "gmossy@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11.9"
package-mode = false

[tool.poetry]
name = "files-demo"
version = "0.1.0"
description = "File System Agent Demo"
authors = ["Glenn Mossy <gmossy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.9"
python-dotenv = ">=1.1.0,<2.0.0"
openai = ">=1.84.0,<2.0.0"
requests = ">=2.32.3,<3.0.0"
langchain = ">=0.1.20,<0.2.0"
langchain-openai = ">=0.1.7,<0.2.0"
langchain-core = ">=0.1.53,<0.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
