[tool.poetry]
name = "tool-agent-tutorial"
version = "0.1.0"
description = "Tool Agent Tutorial Project"
authors = ["Glenn Mossy <gmossy@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.9"
python-dotenv = "^1.1.0"
openai = "^1.84.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
