[tool.poetry]
name = "web-search-demo"
version = "0.1.0"
description = "A web search agent using LangChain and Python"
authors = ["Glenn Mossy <gmossy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.9"
python-dotenv = "^1.1.0"
openai = "^1.84.0"
requests = "^2.32.3"
langchain = "^0.1.20"
langchain-openai = "^0.1.7"
langchain-core = "^0.1.53"
beautifulsoup4 = "^4.12.2"
googlesearch-python = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
